--- a/Sass/index.html
+++ b/Sass/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="container">
-        <section class="sass-intoduction">
+        <section class="sass-introduction">
             <p>Sass stands for</p>
-            <span class="char-highlight">S</span>yntactically
-            <span class="char-highlight">A</span>wesome
-            <span class="char-highlight">S</span>tyle
-            <span class="char-highlight">S</span>heets and it makes the creation of complex css code much easier
+            <span class="char-highlight">Syntactically
+            <span class="char-highlight">Awesome
+            <span class="char-highlight">Style
+            <span class="char-highlight">Sheets and it makes the creation of complex css code much easier
         </section>
         <section class="sass-details">
             <header class="section-header">
