--- a/Sass/index.html
+++ b/Sass/index.html
@@ -1,61 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sass</title>
-    <link rel="stylesheet" href="typography.css">
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="typography.css" />
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
     <div class="container">
-        <section class="sass-introduction">
-            <p>Sass stands for</p>
-            <span class="char-highlight">Syntactically
-            <span class="char-highlight">Awesome
-            <span class="char-highlight">Style
-            <span class="char-highlight">Sheets and it makes the creation of complex css code much easier
-        </section>
-        <section class="sass-details">
-            <header class="section-header">
-                <h1>Useful Resources</h1>
-            </header>
-            <ul class="documentation-links">
-                <li>
-                    <a class="documentation-link link-important" href="https://sass-lang.com/">Using & Installing Sass</a>
-                </li>
-                <li>
-                    <a class="documentation-link link-important" href="https://sass-lang.com/">Nested Rules</a>
-                </li>
-                <li>
-                    <a class="documentation-link link-important" href="https://sass-lang.com/">Nested properties</a>
-                </li>
-                <li>
-                    <a class="documentation-link link-important" href="https://sass-lang.com/">Variables</a>
-                </li>
-                <li>
-                    <a class="documentation-link link-important" href="https://sass-lang.com/">Lists & Maps</a>
-                </li>
-                <li>
-                    <a class="documentation-link link-important" href="https://sass-lang.com/">Built-in Functions</a>
-                </li>
-                <li>
-                    <a class="documentation-link link-important" href="https://sass-lang.com/">Partials</a>
-                </li>
-                <li>
-                    <a class="documentation-link link-important" href="https://sass-lang.com/">Advanced @media</a>
-                </li>
-                <li>
-                    <a class="documentation-link link-important" href="https://sass-lang.com/">Inheritance</a>
-                </li>
-                <li>
-                    <a class="documentation-link link-important" href="https://sass-lang.com/">Mixins</a>
-                </li>
-            </ul>
-        </section>
-
+      <section class="sass-introduction">
+        <p>Sass stands for</p>
+        <span class="char-highlight">S</span>yntactically
+        <span class="char-highlight">A</span>wesome
+        <span class="char-highlight">S</span>tyle
+        <span class="char-highlight">S</span>heets and it makes the creation of
+        complex css code much easier
+      </section>
+      <section class="sass-details">
+        <header class="section-header">
+          <h1>Useful Resources</h1>
+        </header>
+        <ul class="documentation-links">
+          <li>
+            <a
+              class="documentation-link link-important"
+              href="https://sass-lang.com/"
+              >Using & Installing Sass</a
+            >
+          </li>
+          <li>
+            <a
+              class="documentation-link link-important"
+              href="https://sass-lang.com/"
+              >Nested Rules</a
+            >
+          </li>
+          <li>
+            <a
+              class="documentation-link link-important"
+              href="https://sass-lang.com/"
+              >Nested properties</a
+            >
+          </li>
+          <li>
+            <a
+              class="documentation-link link-important"
+              href="https://sass-lang.com/"
+              >Variables</a
+            >
+          </li>
+          <li>
+            <a
+              class="documentation-link link-important"
+              href="https://sass-lang.com/"
+              >Lists & Maps</a
+            >
+          </li>
+          <li>
+            <a
+              class="documentation-link link-important"
+              href="https://sass-lang.com/"
+              >Built-in Functions</a
+            >
+          </li>
+          <li>
+            <a
+              class="documentation-link link-important"
+              href="https://sass-lang.com/"
+              >Partials</a
+            >
+          </li>
+          <li>
+            <a
+              class="documentation-link link-important"
+              href="https://sass-lang.com/"
+              >Advanced @media</a
+            >
+          </li>
+          <li>
+            <a
+              class="documentation-link link-important"
+              href="https://sass-lang.com/"
+              >Inheritance</a
+            >
+          </li>
+          <li>
+            <a
+              class="documentation-link link-important"
+              href="https://sass-lang.com/"
+              >Mixins</a
+            >
+          </li>
+        </ul>
+      </section>
     </div>
-    
-</body>
+  </body>
 </html>
