--- a/customers/index.html
+++ b/customers/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uHost Customers</title>
     <link rel="shortcut icon" href="../favicon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:400,700" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:400,700" rel="stylesheet"> -->
     <link rel="stylesheet" href="../shared.css">
     <link rel="stylesheet" href="customers.css">
 </head>
