--- a/start-hosting/index.html
+++ b/start-hosting/index.html
@@ -11,10 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Anton"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:400,700"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="stylesheet" href="../shared.css" />
     <link rel="stylesheet" href="start-hosting.css" />
   </head>
