--- a/customers/index.html
+++ b/customers/index.html
@@ -12,7 +12,15 @@
 </head>
 <body>
     <div class="backdrop"></div>
-
+    <div class="modal">
+        <h1 class="modal_title">Do you want to continue?</h1>
+        <div class="modal_actions">
+          <a href="start-hosting/index.html" class="modal_action">Yes!</a>
+          <button class="modal_action modal_action--negative" type="button">
+            No!
+          </button>
+        </div>
+      </div>
     <header class="main-header">
         <div>
             <button class="toggle-button">
