--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h3>For hobby projects or small teams.</h3>
             <ul class="plan_features">
               <li class="plan_feature">1 Workspace</li>
-              <li class="plan_feature">Unlimited Trafic</li>
+              <li class="plan_feature">Unlimited Traffic</li>
               <li class="plan_feature">10GB Storage</li>
               <li class="plan_feature">Basic Support</li>
             </ul>
