--- a/customers/index.html
+++ b/customers/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="backdrop"></div>
-    <!-- <div class="modal">
+    <div class="modal">
         <h1 class="modal_title">Do you want to continue?</h1>
         <div class="modal_actions">
           <a href="start-hosting/index.html" class="modal_action">Yes!</a>
@@ -20,7 +20,7 @@
             No!
           </button>
         </div>
-      </div> -->
+      </div>
     <header class="main-header">
         <div>
             <button class="toggle-button">
@@ -62,7 +62,7 @@
         </ul>
     </nav>
     <main>
-        <div>
+        <div style="overflow-x: hidden;">
             <div class="testimonial" id="customer-1">
                 <div class="testimonial_image-container">
                     <img src="../images/customer-1.jpg" alt="Mike Statham-Customer" class="testimonial_image">
