--- a/start-hosting/index.html
+++ b/start-hosting/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="backdrop"></div>
-    <!-- <div class="modal">
+    <div class="modal">
       <h1 class="modal_title">Do you want to continue?</h1>
       <div class="modal_actions">
         <a href="start-hosting/index.html" class="modal_action"></a>
@@ -29,7 +29,7 @@
           type="button"
         ></button>
       </div>
-    </div> -->
+    </div>
     <header class="main-header">
       <div>
         <button class="toggle-button">
